--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,877 +1,52 @@
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-
-html{
-    scroll-behavior: smooth;    
-    scroll-padding-top: 10rem;  
-    max-width: 100%;    
-}
-
-body{
-    background-color: #f4f4f4;
-    font-family: 'Poppins', sans-serif;
-    color: #3E3E3E; 
-}
-
-/* Navbar starts */
-
-:root{
-    --blue: #2f7ff8;
-    --deepblue: #0151ff;
-    --darkgray: #3d3d3d;
-    --white: #fff;
-    --liteblue: #E1E7FC;
-    --orangered: #ff5100;
-    --darkblue: #042875;
-    --swawnsdown: #ddeee8;
-}
-
-.nav-container{
-    width: 100%;
-    background-color: var(--darkgray);
-    position: fixed;
-    z-index: 2;
-}
-
-.navbar{
-    display: grid;
-    grid-template-columns: .2fr auto 1fr;
-    align-items: center;
-    height: 80px;
-    width: 80%;
-    max-width: 1720px;
-    margin: 0 auto;
-    z-index: 2;
-}
-
-.navbar img{
-    width: 180px;
-}
-
-#navbar-logo{
-    justify-self: start;
-    margin-left: 20px;
-    cursor: pointer;
-}
-
-.nav-menu{
-    display: grid;
-    grid-template-columns: repeat(6, auto);
-    list-style: none;
-    text-align: center;
-    width: 70%;
-    justify-self: end;
-    z-index: 2;
-}
-
-.nav-links{
-    color: var(--white);
-    text-decoration: none;
-}
-
-.nav-links:hover{
-    color: var(--blue);
-    transition: all .3s ease-in-out;
-    z-index: 2;
-}
-
-.nav-links-btn{
-    background-color: var(--blue);
-    padding: 5px 15px;
-    border-radius: 10px;
-}
-
-.nav-links-btn:hover{
-    background-color: transparent;
-    color: var(--blue);
-    border-radius: 10px;
-    border: solid 1px var(--blue);
-    transition: all .3s ease-out;
-    cursor: pointer;
-}
-
-.menu-toggle .bar{
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    transition: all .3s ease-in-out;
-    background: var(--white);
-}
-
-/* Navbar ends*/
-
-/* Hero Section Start */
-
-#hero{
-    background-color: var(--liteblue);    
-    height: 480px;
-}
-
-.container{    
-    width: 1120px;
-    margin: auto;
-}
-
-#hero .container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-#hero .container .content{
-    margin-top: 80px;
-}
-
-#hero .container .content button:hover{
-    cursor: pointer;
-}
-
-#hero .container .content .contentA{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-h1{
-    width: 495px;
-    font-size: 40px;
-    font-weight: 800;
-    background: -webkit-linear-gradient(45deg, var(--deepblue), var(--orangered));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-#hero .container .content .contentA ul{
-    display: flex;
-    gap: 50px;
-    list-style: none;
-}
-
-#hero .container .content .contentA ul li a{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    text-decoration: none;
-    color: var(--darkgray);
-    font-weight: 400;
-    font-size: 14px;
-}
-
-#hero .container .content .contentA ul a img{
-    width: 15px;
-    height: 15px;
-}
-
-#hero .container .content .contentA button{
-    padding: 10px 14px;
-    background-color: var(--blue);
-    color: var(--swawnsdown);
-    font-weight: 600;
-    border: 0;
-    border-radius: 0 15px 15px;
-}
-
-#hero .container .content img{
-    width: 500px;
-}
-
-#hero #btnwsapp{
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--blue);
-    border: none;
-    border-radius: 50px 50px 50px 0px;
-    width: 65px;
-    height: 65px;
-    bottom: 50px;
-    right: 50px;
-}
-
-#hero #btnwsapp:hover{
-    background-color: var(--darkblue);
-    transition: .3s ease-in;
-}
-
-#hero #btnwsapp img{
-    width: 50px;
-}
-
-/* hero section end */
-
-#highlight .boxes{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 20px;
-    margin-top: -80px;
-}
-
-#highlight .boxes .box{    
-    background-color: var(--white);
-    border-radius: 10px;
-    box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.1);
-    width: 350px; height: 250px;
-}
-
-#highlight .boxes .box:hover{
-    border: 1px solid var(--deepblue);
-    transition: .2s ease-in;
-}
-
-#highlight .boxes .box{
-    padding: 25px;       
-}
-
-h3{
-    color: var(--darkgray);
-    font-weight: 600;
-    font-size: 22px;
-}
-
-#highlight .boxes .box p{
-    font-size: 14px;
-    font-weight: 400;
-    color: var(--blue);
-    text-decoration: underline;
-    padding: 5px 0 0;
-}
-
-#highlight .boxes .box ul{
-    color: var(--darkgray);
-    font-size: 14px;
-    padding: 10px 0 0 15px;
-}
-
-/* About section start */
-
-#about .container .content .box{
-    display: flex;
-    margin-top: 50px;
-}
-
-#about .container .content .box{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-#about .container .content .box .about{
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    /* width: 50%; */
-}
-
-h2{
-    font-size: 25px;
-    font-weight: 600;
-    background: -webkit-linear-gradient(45deg, var(--deepblue), var(--orangered));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-#about .container .content .box p{
-    color: var(--darkgray);
-    text-align: justify;
-    width: 600px;
-}
-
-#about .container .content .box .pic img{
-    width: 300px;
-}
-
-/* About section end*/
-
-/* Service section start */
-
-#services{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 50px 0;
-}
-
-#services .container{
-    display: flex;
-    flex-direction: column;
-    gap: 35px;
-    padding: 50px 0;
-}
-
-#services .container .boxes{
-    display: flex;
-    gap: 35px;
-}
-
-#services .container .boxes .box{
-    display: flex;
-    flex-direction: column;
-    align-items: center;  
-    background-color: var(--white);
-    border-radius: 10px;
-    box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.1);
-    width: 350px; height: 500px;
-    padding: 20px;    
-    border: 1px solid var(--deepblue);
-}
-
-#services .container .boxes .box:hover{
-    background-color: var(--liteblue);
-    transition: .1s ease-in;
-    border: 0px solid var(--deepblue);
-}
-
-#services .container .boxes .box{
-    text-decoration: none;
-}
-
-h4{
-    font-size: 20px;
-    font-weight: 600;    
-    background: -webkit-linear-gradient(45deg, var(--deepblue), var(--orangered));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    text-align: center;
-}
-
-#services .container .boxes .box .content{
-    display: flex;
-    flex-direction: column;
-    margin: 30px 0;
-}
-
-#services .container .boxes .box .content ul li{
-    color: var(--darkgray);
-    font-size: 14px;
-    padding: 10px 0;
-}
-
-#services .container .boxes .box a{
-    position: absolute;
-    background-color: var(--blue);
-    color: var(--swawnsdown);
-    margin: 400px;
-    padding: 5px 20px;
-    border: 0;
-    border-radius: 5px;
-    font-size: 14px;
-    text-decoration: 0;
-}
-
-#btnS{
-    z-index: 1;
-}
-
-/* Service section end */
-
-/* Portfolio section starts */
-
-#portfolio{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 50px 0;
-}
-
-#portfolio .container .boxes{
-    display: flex;
-    flex-direction: row;
-    padding: 50px 0;    
-    gap: 35px;
-}
-
-#portfolio .container .boxes .box{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px 0;
-    background-color: var(--white);
-    border: 1px solid var(--deepblue);
-    border-radius: 10px;
-    box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.2);
-    width: 350px; height: 350px;
-}
-
-#portfolio .container .boxes .box:hover{
-    background-color: var(--liteblue);
-}
-
-#portfolio .container .boxes .box img{
-    width: 325px;
-    padding: 30px 0 30px;
-}
-
-#portfolio .container .boxes .box a{
-    background-color: var(--blue);
-    width: 100%;
-    color: var(--swawnsdown);
-    text-decoration: none;
-    text-align: center;
-    padding: 20px 0 20px;
-    box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.1);
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
-#branding{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--blue);
-    width: 100%;
-    height: 100px;
-}
-
-#branding h4{
-    font-size: 50px;
-    font-weight: 800;
-    background: -webkit-linear-gradient(45deg, var(--swawnsdown), var(--orangered));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-#logomarks{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-#logomarks .content{
-    display: flex;
-    flex-direction: column;
-    rotate: -45deg;
-}
-
-#logomarks .content .boxes{
-    display: flex;
-    flex-direction: row;
-}
-
-#logomarks .content .boxes .box{
+.messages-item-typing {
+    will-change: transform;
+    width: auto;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    padding: 15px 20px;
+    display: table;
+    margin-right: auto;
     position: relative;
-    background: var(--blue);
-    margin: 5px;
-    width: 200px;
-    height: 200px;
-    border-radius: 10px;
-    z-index: 1;
+    animation: 2s bulge infinite ease-out;
 }
 
-#logomarks .content .boxes .box:hover{
-    background-color: var(--liteblue);
-    transition: .3s ease-in;
+.messages-item-typing::before,
+.messages-item-typing::after {
+    content: '';
+    position: absolute;
+    bottom: -2px;
+    left: -2px;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+}
+.messages-item-typing::after {
+    height: 10px;
+    width: 10px;
+    left: -10px;
+    bottom: -10px;
+}
+span.messages-dot {
+    height: 8px;
+    width: 8px;
+    float: left;
+    margin: 0 1px;
+    background-color: #9E9EA1;
+    display: block;
+    border-radius: 50%;
+    opacity: 0.4;
+    animation: 1s blink infinite;
 }
 
-#logomarks .content .boxes .box img{
-    rotate: 45deg;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 50px 50px;
-}
-
-/* Portfolio section end */
-
-/* Contact section start */
-
-#contacts{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--liteblue);
-    margin: 20vh 0 0;
-    width: 100%;
-}
-
-#contacts{
-    padding-bottom: 20px;
-}
-
-#contacts h4{
-    font-size: 50px;
-    font-weight: 800;
-    background: -webkit-linear-gradient(45deg, var(--deepblue), var(--orangered));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    padding: 50px 0 0;
-}
-
-#contacts .container{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    gap: 30px;
-    padding: 80px 0 0;
-}
-
-#contacts .container .names{
-    display: flex;
-    flex-direction: row;
-    gap: 30px;
-    width: 100%;
-}
-
-#contacts .container .info{
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    width: 100%;
-}
-
-#contacts .container .frm{
-    padding: 15px;
-    width: 100%;
-    font-size: 16px;
-}
-
-#contacts .container textarea{
-    max-width: 1120px;
-    max-height: 150px;
-    min-width: 1120px;
-    min-height: 100px;
-}
-
-#contacts .container button{
-    padding: 10px 30px;
-    margin-bottom: 50px;
-    border: 0;
-    background-color: var(--blue);
-    color: var(--swawnsdown);
-    font-size: 16px;
-    border-radius: 5px;
-}
-
-#contacts .container button:hover{
-    background-color: var(--darkblue);
-    cursor: pointer;
-}
-
-/* Contacts section end */
-
-/* Footer start */
-
-footer{
-    display: flex;
-    background-color: var(--blue);
-}
-
-footer .container{
-    display: flex;
-    justify-content: space-between;
-}
-
-footer .container .content{
-    display: flex;
-    justify-content: center;
-    gap: 100px;
-}
-
-footer .container .content .links, .pageInfo{
-    display: flex;
-    flex-direction: column;
-    gap: 15px;    
-    padding: 50px 0;
-}
-
-h5{
-    font-size: 20px;
-    color: var(--swawnsdown);
-    font-weight: 600;
-}
-
-footer .container .content .links ul{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    list-style: none;
-}
-
-footer .container .content .links ul li a{
-    text-decoration: 0;
-    font-size: 14px;
-    color: var(--swawnsdown);
-}
-
-.pageInfo img{
-    width: 200px;
-}
-
-.pageInfo .sociallinks ul{
-    display: flex;
-    list-style: none;
-    gap: 20px;
-}
-
-.pageInfo .sociallinks img{
-    width: 35px;
-}
-
-.cr p{
-    color: var(--swawnsdown);
-    font-size: 14px;
-}
-
-/* Footer end */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media screen and (max-width: 720px) {
-
-    *{
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-    }
-
-    .nav-container{
-        position: fixed;
-    }
-
-    .nav-menu{
-        display: grid;
-        grid-template-columns: auto;
-        background-color: var(--blue);
-        margin: 0;
-        width: 100%;
-        position: absolute;
-        top: 60px;
-        left: -100%;
-        opacity: 0;
-        transition: all.5s ease;
-    }
-
-    #navbar-logo{
-        margin-left: 20px;
-    }
-
-    .nav-menu.active{
-        background: var(--darkgray);
-        left: 0;
+@keyframes blink {
+    50% {
         opacity: 1;
-        transition: all .5s ease;
-    }
-
-    .nav-links{
-        text-align: center;
-        line-height: 60px;
-        width: 100%;
-        display: table;
-    }
-
-    .nav-links:hover{
-        background-color: var(--swawnsdown);
-        color: var(--blue);
-        transition: all .4s ease-out;
-    }
-
-    .navbar{
-        width: 90%;
-    }
-
-    .nav-links-btn{
-        border: none;
-        padding: 0;
-        border-radius: 0;
-        background-color: var(--darkgray);
-        color: var(--white);
-        transition: all .4s ease-out;        
-    }
-
-    .nav-links-btn:hover{
-        border: none;
-        padding: 0;
-        border-radius: 0;
-        background-color: var(--blue);
-        color: var(--white);
-        transition: all .4s ease-out;
-    }
-
-    #mobile-menu{
-        position: absolute;
-        top: 20%;
-        right: 5%;
-        transform: translate(5%, 20%);
-    }
-
-    .menu-toggle .bar{
-        display: block;
-        cursor: pointer;
-    }
-
-    .menu-toggle:hover{
-        cursor: pointer;
-    }
-
-    #mobile-menu.is-active .bar:nth-child(2){
-        opacity: 0;
-    }
-
-    #mobile-menu.is-active .bar:nth-child(1){
-        transform: translateY(8px) rotate(45deg);
-    }
-
-    #mobile-menu.is-active .bar:nth-child(3){
-        transform: translateY(-8px) rotate(-45deg);
-    }
-
-    h1{
-        font-size: 30px;
-        width: 90%;
-    }
-
-    .contacts p, p{
-        width: 90%;
-        text-align: justify;
-    }
-
-    #logomarks{
-        display: none;
-    }
-
-    #hero #webflow, #hero #button{
-        display: none;
-    }
-
-    #hero .container{
-        width: 90%;
-        padding: 50px 0;
-    }
-
-    #hero #btnwsapp{
-        width: 45px;
-        height: 45px;
-        bottom: 30px;
-        right: 30px;
-    }
-
-    #hero #btnwsapp img{
-        width: 35px;
-    }
-
-    #highlight .container{
-        width: 90%;
-    }
-
-    #highlight .container .content .boxes{        
-        display: flex;
-        flex-direction: column;
-    }
-
-    #highlight .container .content .boxes .box{
-        width: 100%;
-    }
-
-    #about .container{
-        width: 90%;
-    }
-
-    #about .container .content .box{
-        display: flex;
-        flex-direction: column;
-    }
-
-    #about .container .content .box .about{
-        align-items: center;
-    }
-
-    #about .container .content .box .about p{
-        width: 100%;
-    }
-
-    #services .container{
-        width: 90%;
-    }
-
-    #services .container .boxes{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    #services .container .boxes .box{
-        width: 100%;
-    }
-
-    #portfolio .container{
-        width: 90%;
-    }
-
-    #portfolio .container .boxes{
-        display: flex;
-        flex-direction: column;
-    }
-
-    #portfolio .container .boxes .box{
-        width: 100%;
-    }
-
-    #contacts .container{
-        width: 90%;
-        align-items: center;
-    }
-
-    #contacts .container .names{
-        display: flex;
-        flex-direction: row;
-    }
-
-    #contacts .container .info textarea{
-        min-width: 100%;
-        max-width: 100%;
-        max-height: 200px;
-    }
-
-    footer .container{
-        width: 90%;
-        display: flex;
-        flex-direction: column;
-    }
-
-    footer .container .content{        
-        width: 90%;
-        display: flex;
-        flex-direction: column;
-    }
-
-    footer .container .content .links{
-        padding: 50px 0 0;
-    }
-
-    footer .container .content #llink{
-        padding: 0 0 50px;
     }
 }
 
+@keyframes bulge {
+    50% {
+        transform: scale(1.05);
+    }
+}
