--- a/CSS/style.css
+++ b/CSS/style.css
@@ -105,7 +105,7 @@ body{
     height: 3px;
     margin: 5px auto;
     transition: all .3s ease-in-out;
-    background: var(--white);
+    background: var(--black);
 }
 
 /* Navbar ends*/
@@ -734,11 +734,11 @@ footer .container .content .links ul li a{
     .nav-menu{
         display: grid;
         grid-template-columns: auto;
-        background-color: var(--blue);
+        background-color: var(--fineblue);
         margin: 0;
         width: 100%;
         position: absolute;
-        top: 60px;
+        top: 80px;
         left: -100%;
         opacity: 0;
         transition: all.5s ease;
@@ -749,7 +749,7 @@ footer .container .content .links ul li a{
     }
 
     .nav-menu.active{
-        background: var(--darkgray);
+        background: var(--white);
         left: 0;
         opacity: 1;
         transition: all .5s ease;
@@ -763,8 +763,8 @@ footer .container .content .links ul li a{
     }
 
     .nav-links:hover{
-        background-color: var(--swawnsdown);
-        color: var(--blue);
+        background-color: var(--blue);
+        color: var(--white);
         transition: all .4s ease-out;
     }
 
@@ -944,5 +944,17 @@ footer .container .content .links ul li a{
     footer .container .content #llink{
         padding: 0 0 50px;
     }
-}
 
+    #hero .circular{
+        position: absolute;
+        border-radius: 100%;
+        border: 1px solid #f4f4f4;
+        width: 100%;
+        height: 47%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        opacity: 0.3;
+        z-index: 1;
+    }
+}
