--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,8 +28,8 @@ body{
     --orangered: #ff5100;
     --darkblue: #042875;
     --swawnsdown: #ddeee8;
-    --fineblue: #2f7ff9;
-    --heavyblue: #072552;
+    --fineblue: #006eff;
+    --heavyblue: #181f63;
     --cyan: #8EFBF7;
 }
 
