--- a/CSS/style.css
+++ b/CSS/style.css
@@ -38,6 +38,7 @@ body{
     background-color: var(--white);
     position: fixed;
     z-index: 4;
+    box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.1);
 }
 
 .navbar{
@@ -150,7 +151,7 @@ body{
     border-radius: 100%;
     border: 1px solid #f4f4f4;
     width: 80%;
-    height: 145%;
+    height: 135%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -224,9 +225,6 @@ h1{
     font-size: 14px;
 }
 
-#hero #webflow{
-}
-
 #hero .container .content .contentA ul a img{
     width: 15px;
     height: 15px;
@@ -276,20 +274,20 @@ h1{
     align-items: center;
     justify-content: space-between;
     gap: 20px;
-    margin-top: -80px;
+    margin-top: -60px;
 }
 
 #highlight .boxes .box{    
     background-color: var(--white);
     border-radius: 10px;
-    border: 1px solid var(--blue);
+    border: 1px dashed var(--deepblue);
     box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.1);
-    width: 350px; height: 250px;
+    width: 360px; height: 280px;
 }
 
-#highlight .boxes .box:hover{
-    border: 1px solid var(--white);
-    transition: .2s ease-in;
+#highlight .container .content .boxes .box:hover{
+    background-color: var(--liteblue);
+    transition: .1s ease-in;
     cursor: pointer;
 }
 
@@ -303,12 +301,12 @@ h3{
     font-size: 22px;
 }
 
-#highlight .boxes .box p{
+#highlight .boxes .box a p{
     font-size: 14px;
     font-weight: 400;
     color: var(--blue);
     text-decoration: underline;
-    padding: 5px 0 0;
+    line-height: 40px;
 }
 
 #highlight .boxes .box ul{
@@ -318,6 +316,10 @@ h3{
 }
 
 /* About section start */
+
+#about .container{
+    z-index: 2;
+}
 
 #about .container .content .box{
     display: flex;
@@ -334,7 +336,6 @@ h3{
     display: flex;
     flex-direction: column;
     gap: 40px;
-    /* width: 50%; */
 }
 
 h2{
@@ -834,6 +835,20 @@ footer .container .content .links ul li a{
         display: none;
     }
 
+    #hero .container .content{
+        position: absolute;
+        font-size: 50px;
+        height: 135%;
+        top: 85%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    #hero h1{
+        font-size: 50px;
+        text-align: start;
+    }
+
     #hero .container{
         width: 90%;
         padding: 50px 0;
@@ -954,6 +969,7 @@ footer .container .content .links ul li a{
         transform: translate(-50%, -50%);
         opacity: 0.3;
         z-index: 1;
+        display: none;
     }
 }
 
